# web_dj_25

./: LICENSE  README.md  pyproject.toml
quotes_project/: manage.py  pyproject.toml
quotes_project/quotes_app/: forms.py  models.py  urls.py  utils.py  views.py
quotes_project/quotes_app/migrations/: 0001_initial.py
quotes_project/quotes_app/static/quotes_app/: style.css
quotes_project/quotes_app/templates/quotes_app/: add_author.html  add_quote.html  author_detail.html  author_list.html  author_not_found.html  base.html  index.html  login.html  logout.html  quote_list.html  register.html
quotes_project/quotes_app/templatetags/: author_filters.py
quotes_project/quotes_project/: settings.py  urls.py  wsgi.py
quotes_project/utils/: add_quotes.py  author.py  convert_to_utf8.py  quotes.py
