[tool.poetry]
name = "quotes-project"
version = "0.1.0"
description = ""
authors = ["Sasha"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python   = "^3.13"
asgiref  = "^3.8.1"
Django   = "^5.1.2"
pip      = "^24.3.1"
sqlparse = "^0.5.1"
tzdata   = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
